--- a/assets/css/advancedStyle.css
+++ b/assets/css/advancedStyle.css
@@ -93,3 +93,10 @@ img {
     width: 500px;
     height: 400px
 }
+
+@media screen and (max-width: 640px) {
+    img {
+        width: 400px;
+        height: 400px
+    }
+}
